# ceia-computer-vision-1

./: .gitignore  README.md  pyproject.toml
TP1/: tp1.ipynb
TP2/: tp2.ipynb
TP2/focus_results/: detection_summary.txt  metrics_fft.npz  metrics_sml.npz
