[project]
name = "ceia-computer-vision-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.0.0,<2.3.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "supervision (>=0.26.1,<0.27.0)",
    "scikit-image (>=0.25.2,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

